# burst_sync

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  History.rst  LICENSE.txt  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
burst_sync/: __init__.py  _version.py  asdr.py  b_stat.py  skeleton.py
burst_sync/Tcrit_ISIN_and_B_statistic/: BurstProcs.ipf  Demo.pxp  ISINBurstProcs.ipf  Spike Time Procs.ipf  Summary Proc.ipf  Utilities.ipf
burst_sync/global_sync/: __init__.py  global_sync.py
burst_sync/isi_n/: __init__.py  isi_n.py
burst_sync/isin/: __init__.py  isin.py
burst_sync/plots/: __init__.py  plots.py
burst_sync/rgs/: R.py  __init__.py  rgs.py
burst_sync/spike/: __init__.py  original_spike.py  spike.pyi
burst_sync/spike/cython_spike/: cython_spike.c  cython_spike.pyx  find_corner_spikes.c  find_corner_spikes.h
burst_sync/sttc/: __init__.py  sttc.pyi
burst_sync/sttc/cython_sttc/: cython_sttc.c  cython_sttc.pyx  spike_time_tiling_coefficient.c  spike_time_tiling_coefficient.h
burst_sync/t_crit/: __init__.py  t_crit.py
burst_sync/tcrit/: __init__.py  igor.py  tcrit.py
continuous-integration/appveyor/: install.ps1
continuous-integration/travis/: travis_install.sh
docs/: Makefile  conf.py  index.rst
tests/: ASDR+B.csv  bursts.csv  conftest.py  draw_igor.py  ibi.csv  isin_bursts.csv  kreuz_phase.csv  networkBursts.csv  numSpikesInBurst.csv  output_b3.csv  output_p1.csv  output_p3.csv  spikes.csv  test_R.py  test_asdr.py  test_b_stat.py  test_data.csv  test_gs.py  test_isi_n.py  test_isin.py  test_plots.py  test_rgs.py  test_spike.py  test_sttc.py  test_t_crit.py  test_tcrit.py
tests/baseline/: ch_1.txt  ch_2.txt  ch_3.txt  ch_4.txt  ch_5.txt  ch_6.txt  ch_7.txt  ch_8.txt
tests/data/: sttc_result.csv
tests/data/rgs/: output_p2.csv  testdata1.csv  testdata2.csv  testdata3.csv
