[build-system]
requires = ["setuptools>=48", "wheel >= 0.29.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "burst_sync"
description = "analyse bursting in mea data"
version = "2.0.0.dev0"
authors = [
    {name = "Larry Eisenman", email = "leisenman@wustl.edu"}
]
license = {file = "LICENSE.txt"}
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD3 License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/lneisenman/burst_sync"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rsxXf --cov-report term-missing --cov=burst_sync"
norecursedirs = [".cache", ".git", ".tox", "build", "*.egg-info"]
testpaths = ["tests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "tests.*.*",
    "burst_sync.rgs.*",
    "burst_sync.spike.*",
    "burst_sync.sttc.*",
]
disallow_untyped_defs = false
